// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Pagination center renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
  >
    <ul
      class="pagination justify-content-center"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          First
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="#"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          Last
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination end renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
  >
    <ul
      class="pagination justify-content-end"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          First
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="#"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          Last
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination lg renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
  >
    <ul
      class="pagination pagination-lg"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          First
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="#"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          Last
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          First
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="#"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          Last
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination renders correctly with custom icons 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      >
        <a
          aria-label="previous"
          class="page-link"
          href="#"
        >
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="/icons.svg#arrow-left"
            />
          </svg>
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="#"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          aria-label="next"
          class="page-link"
          href="#"
        >
          <svg
            class="bi icon--s"
          >
            <use
              xlink:href="/icons.svg#arrow-right"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination renders correctly with icons 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
  >
    <ul
      class="pagination"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          First
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="#"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          Last
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - Pagination sm renders correctly 1`] = `
<jest>
  <nav
    aria-label="Test aria label"
  >
    <ul
      class="pagination pagination-sm"
    >
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          First
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
        </a>
      </li>
      <li
        class="page-item disabled"
      >
        <a
          aria-disabled="true"
          class="page-link"
          href="#"
          tabindex="-1"
        >
          1
        </a>
      </li>
      <li
        class="page-item active"
      >
        <a
          aria-current="page"
          class="page-link"
          href="#"
        >
          2
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          3
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
        </a>
      </li>
      <li
        class="page-item"
      >
        <a
          class="page-link"
          href="#"
        >
          Last
        </a>
      </li>
    </ul>
  </nav>
</jest>
`;
